--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/slider": "^4.5.7",
     "@react-native/new-app-screen": "0.80.0",
+    "lodash": "^4.17.21",
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-bluetooth-classic": "^1.73.0-rc.13"
